# cria

./: .gitignore  Makefile  README.md  docker-compose.yaml  jobs.txt
.github/workflows/: ci.yaml  nightly-load.yaml
control-plane/: Cargo.toml  Dockerfile  build.rs
control-plane/src/: bff.rs  config.rs  main.rs  telemetry.rs
control-plane/src/api/: mod.rs
control-plane/src/kafka/: mod.rs
control-plane/src/state/: mod.rs
control-plane/src/streaming/: mod.rs
docs/: architecture.md
docs/runbooks/: operations.md
examples/: prompts.txt
helm/cria/: Chart.yaml  values.yaml
helm/cria/templates/: _helpers.tpl  control-plane.yaml  hpa.yaml  kafka-init-job.yaml  kafka.yaml  keda-scaledobject.yaml  namespace.yaml  worker.yaml
infra/kafka/: kafka-deployment.yaml
infra/keda/: keda-scaledobject.yaml
infra/observability/: prometheus.yaml
infra/observability/dashboards/: cria-overview.json
k8s/: README.md  control-plane.yaml  hpa.yaml  mtls-secret.example.yaml  namespace.yaml  worker.yaml
proto/: inference.proto
scripts/: gen-dev-certs.sh  smoke_test.py
web/: index.html  package-lock.json  package.json  tsconfig.app.json  vite.config.ts
web/src/: App.tsx  index.css
web/src/lib/: api.ts
workers/python/: Dockerfile  client.py  generate_grpc.py  load_test.py  pyproject.toml  requirements.txt
workers/python/inference_worker/: __init__.py  config.py  events.py  kafka_io.py  main.py
workers/python/inference_worker/backends/: base.py  mock_backend.py  transformers_backend.py
workers/python/tests/: test_events.py  test_mock_backend.py
(+4 files in other folders)
